--- a/materials/exercises/02-resample.Rmd
+++ b/materials/exercises/02-resample.Rmd
@@ -23,18 +23,14 @@ ames_test <- testing(ames_split)
 Run the first code chunk. Then fill in the blanks to:
 
 1. Create a split object that apportions 75% of `ames` to a training set and the remainder to a testing set.
-2. Fit the `all_wf` to the split object.
-3. Extract the rmse of the fit.
+2. Fit the `all_wf` to the training set.
+3. Predict with the testing set and compute the rmse of the fit.
 
 ```{r}
-lm_spec <- 
-  linear_reg() %>% 
-  set_engine("lm")
-
-all_wf <- 
-  workflow() %>% 
-  add_formula(Sale_Price ~ .) %>% 
-  add_model(lm_spec)
+rt_spec <- 
+  decision_tree() %>% 
+  set_engine("rpart") %>% 
+  set_mode("regression")
 
 set.seed(100)
 ```
@@ -44,19 +40,21 @@ new_split <- ___________(ames)
 new_train <- ___________(new_split)
 new_test  <- ___________(new_split)
 
-all_wf %>% 
-  fit(data = ___________) %>% 
-  predict(new_test) %>% 
-  mutate(truth = new_test$Sale_Price) %>% 
+rt_spec %>% 
+  fit(Sale_Price ~ ., data = ___________) %>% 
+  predict(_______) %>% 
+  mutate(truth = _______$Sale_Price) %>% 
   rmse(truth, .pred)
 ```
 
 
 # Your Turn 2
 
-What would happen if you repeated this process? Would you get the same answers? Discuss in your team. 
+What would happen if you repeated this process? Would you get the same answers?
 
 Note your answer from above. Then rerun just the last code chunk above. Do you get the same answer?
+
+Try it a few times.
 
 
 # Your Turn 3
@@ -72,11 +70,12 @@ cv_folds
 
 # Your Turn 4
 
-Modify the code below to use `fit_resamples` and `cv_folds` to cross-validate the `all_wf` workflow. Which RMSE do you collect at the end?
+Modify the code below to use `fit_resamples` and `cv_folds` to cross-validate the regression tree model. Which RMSE do you collect at the end?
 
 ```{r}
-all_wf %>% 
-  fit(data = new_train) %>% 
+set.seed(100)
+rt_spec %>% 
+  fit(Sale_Price ~ ., data = new_train) %>% 
   predict(new_test) %>% 
   mutate(truth = new_test$Sale_Price) %>% 
   rmse(truth, .pred)
