--- a/slides/02-resample.Rmd
+++ b/slides/02-resample.Rmd
@@ -72,7 +72,8 @@ rt_spec <-
 
 layout: true
 
-<a class="footer-link" href="TBD">TBD</a>
+<a class="footer-link" href="https://tmv.netlify.app/">https://tmv.netlify.app/</a>
+
 
 ---
 
