--- a/slides/01-model.Rmd
+++ b/slides/01-model.Rmd
@@ -62,7 +62,8 @@ splits_pal <- c(data_color, train_color, test_color)
 
 layout: true
 
-<a class="footer-link" href="TBD">TBD</a>
+<a class="footer-link" href="https://tmv.netlify.app/">https://tmv.netlify.app/</a>
+
 
 ---
 
